# MRP

./: .gitmodules  Cargo.toml  README.md  remappings.txt
apps/: Cargo.toml
apps/src/: AADemo.json  lib.rs
contracts/: AADemo.sol
methods/guest/: Cargo.toml
oidc-validator/src/: certs.rs  lib.rs
script/: Deploy.s.sol
tests/: AADemo.t.sol  AaFork.t.sol
