[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = {workspace = true}
alloy-network= {workspace=true}
alloy-contract = {workspace=true}
alloy-signer-local = {workspace=true}
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
warp = "0.3.6"
google-oauth = "1.11.0"
url = "2.5.2"
